# byzanz

./: .cvsignore  .gitignore  ChangeLog  Makefile.am  NEWS  README  autogen.sh  configure.ac
data/: Makefile.am
gifenc/: Makefile.am  gifenc-readbits.h  gifenc.c  gifenc.h  i18n.h  quantize.c
macros/: Makefile.am  as-compiler-flag.m4  as-scrub-include.m4
po/: .cvsignore  ChangeLog  POTFILES.in  ar.po  ca.po  cs.po  da.po  de.po  el.po  es.po  fi.po  fr.po  gl.po  hu.po  id.po  it.po  lv.po  nb.po  oc.po  pl.po  pt_BR.po  ru.po  sl.po  sv.po  tr.po  vi.po  zh_CN.po
src/: .cvsignore  ByzanzApplet.server.in.in  Makefile.am  byzanz-playback.1  byzanz-record.1  byzanz.schemas.in  byzanzapplet.c  byzanzapplet.xml  byzanzencoder.c  byzanzencoder.h  byzanzencoderbyzanz.c  byzanzencoderbyzanz.h  byzanzencoderflv.c  byzanzencoderflv.h  byzanzencodergif.c  byzanzencodergif.h  byzanzencodergstreamer.c  byzanzencodergstreamer.h  byzanzencoderogv.c  byzanzencoderogv.h  byzanzencoderwebm.c  byzanzencoderwebm.h  byzanzlayer.c  byzanzlayer.h  byzanzlayercursor.c  byzanzlayercursor.h  byzanzlayerwindow.c  byzanzlayerwindow.h  byzanzqueue.c  byzanzqueue.h  byzanzqueueinputstream.c  byzanzqueueinputstream.h  byzanzqueueoutputstream.c  byzanzqueueoutputstream.h  byzanzrecorder.c  byzanzrecorder.h  byzanzselect.c  byzanzselect.h  byzanzserialize.c  byzanzserialize.h  (+12 more)
